# kz-ruzpara-1

./: README.md  time.txt
crates/storage/db/src/: metrics.rs
pee/: rovoz.sh
pee/ret/: README.MD
pee/rov/: README.MD
pee/rov/ro1/: Cargo.toml  README.md  rules.txt
pee/rov/ro1/examples/: simple_usage.rs
pee/rov/ro1/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
pee/rov/ro1/tests/: integration_tests.rs
pee/rov/ro2/: .env.example  Cargo.toml  README.md  prompt.txt  rules.txt
pee/rov/ro2/examples/: basic_usage.rs
pee/rov/ro2/results/: example_response.md  response_20250704_133253.md
pee/rov/ro2/src/: config.rs  lib.rs  main.rs  models.rs  openrouter_client.rs
pee/rov/ro2/tests/: integration_tests.rs
